Fix spacing on header buttons

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -8,10 +8,9 @@ $normal-priority: #ddd22c;
 $high-priority: #dd2c2c;
 
 // Text
-$font-sans: 'Roboto';
 $font-mono: 'JetBrains Mono', monospace;
-$font-system: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-  Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+$font-system: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Open Sans', Roboto,
+  Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 
 // Animations
 $fast-transition: 0.3s;
