--- a/src/styles/core/_base.scss
+++ b/src/styles/core/_base.scss
@@ -12,7 +12,7 @@
 body {
   background-color: $light;
   color: $light;
-  font-family: $font-sans, $font-system;
+  font-family: $font-system;
   width: 100%;
   height: 100vh;
 }
