--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -32,6 +32,8 @@ h1 {
   border: 0;
   outline: none;
   position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
   right: -3rem;
 
   & svg {
