--- a/src/styles/layout/_projects.scss
+++ b/src/styles/layout/_projects.scss
@@ -43,15 +43,21 @@
 }
 
 #btn-new-project {
-  height: 30px;
-  aspect-ratio: 1;
-  font-weight: 300;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  font-size: 2rem;
-  line-height: 28px;
   border: 0;
+  outline: none;
+  padding: 0.2rem 0.5rem 0 0;
+
+  & svg {
+    width: 15px;
+    fill: $gray;
+    transition: $fast-transition;
+  }
+}
+
+#btn-new-project:hover {
+  & svg {
+    fill: $light;
+  }
 }
 
 #btn-new-project:focus {
